--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>E.V.|Home</title>
-    <link rel = "icon" href = "img/logo.svg">
+    <title>E.V.| Home</title>
+    <link rel="icon" href="img/logo.svg">
     <link href="css/main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="main-page">
 <div class="box">
     <div class="row header">
         <div class="top-nav">
@@ -18,7 +18,7 @@
                 <li class="nav-item"><a class="active" href="index.html">_hello</a></li>
                 <li class="nav-item"><a href="about.html">_about-me</a></li>
                 <li class="nav-item"><a href="projects.html">_projects</a></li>
-                <li class="nav-item"><a href="#">_contact</a></li>
+                <li class="nav-item"><a href="contact.html">_contact</a></li>
             </ul>
         </div>
     </div>
@@ -28,10 +28,13 @@
                 <div class="textItem1">
                     <p style="color:white;">Hi, i am</p>
                     <h1 style="color:white;">Elizaveta Vygovskaia</h1>
-                    <h2 style="color:#4D5BCE;">> Back-end Developer</h2>
+                    <div class="slide-right">
+                        <h2 style="color:#4D5BCE;">> Back-end Developer</h2>
+                    </div>
                     <p style="color:#959fb1;">// you can find the source code for the web site on my GitHub page</p>
                     <span style="color:#4D5BCE;">const</span><span style="color:#43D9AD;"> linkToGit</span><span
-                        style="color:white;"> = </span><span><a style="color:#E99287;" href="#">https://github.com/starryskyyy</a></span>
+                        style="color:white;"> = </span><span><a style="color:#E99287;" href="https://github.com/starryskyyy"
+                                                                target="_blank">https://github.com/starryskyyy</a></span>
                 </div>
             </div>
             <div class="item2">
@@ -60,9 +63,15 @@
     <div class="row footer">
         <ul class="nav-list-footer">
             <li class="nav-item-f"><a class="disabled-link">find me in:</a></li>
-            <li class="nav-item-f"><a  style="vertical-align:middle" href="#"><img  style="vertical-align:middle" class="center" src="img/in.png"></a></li>
-            <li class="nav-item-f"><a  style="vertical-align:middle" href="#"><img  style="vertical-align:middle" class="center" src="img/inst.png"></a></li>
-            <li class="nav-item-f"><a  style="vertical-align:middle" href="#">@starryskyyy   <img  style="vertical-align:middle" class="center" src="img/git.png"></a></li>
+            <li class="nav-item-f"><a style="vertical-align:middle" href="https://www.linkedin.com/in/elizavetav/"
+                                      target="_blank"><img style="vertical-align:middle" class="center"
+                                                           src="img/in.png"></a></li>
+            <li class="nav-item-f"><a style="vertical-align:middle" href="https://www.instagram.com/vy_elizabeth/"
+                                      target="_blank"><img style="vertical-align:middle" class="center"
+                                                           src="img/inst.png"></a></li>
+            <li class="nav-item-f"><a style="vertical-align:middle" href="https://github.com/starryskyyy"
+                                      target="_blank">@starryskyyy <img style="vertical-align:middle" class="center"
+                                                                        src="img/git.png"></a></li>
         </ul>
     </div>
 </div>
