--- a/projects.html
+++ b/projects.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>E.V.|Projects</title>
-    <link rel = "icon" href = "img/logo.svg">
+    <title>E.V.| Projects</title>
+    <link rel="icon" href="img/logo.svg">
     <link href="css/main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,25 +15,133 @@
         <div class="top-nav">
             <ul class="nav-list">
                 <li class="nav-item"><a class="disabled-link">elizaveta-vygovskaia</a></li>
-                <li class="nav-item"><a  href="index.html">_hello</a></li>
+                <li class="nav-item"><a href="index.html">_hello</a></li>
                 <li class="nav-item"><a href="about.html">_about-me</a></li>
                 <li class="nav-item"><a class="active" href="projects.html">_projects</a></li>
-                <li class="nav-item"><a href="#">_contact</a></li>
+                <li class="nav-item"><a href="contact.html">_contact</a></li>
             </ul>
         </div>
     </div>
     <div class="row content">
-        <p>content (fills remaining space)</p>
+
+        <div class="project-filters">
+            <div>
+                <section>
+                    <div class="accordion-toggle">
+                        <p class="accordion-link accordion-on ">projects</p>
+                        <div class="accordion-panel" style="border-bottom: none !important;">
+                            <div class="tab">
+                                <div class="filter-container">
+                                    <ul id="filter-options">
+                                        <li><input type="checkbox" value="1" data-filter_id="f-1"> <img
+                                                src="img/c-sharp.png" width="15px" height="15px"> C#
+                                        </li>
+                                        <li><input type="checkbox" value="2" data-filter_id="f-2"> <img
+                                                src="img/cpp.png" width="15px" height="15px"> C++
+                                        </li>
+                                        <li><input type="checkbox" value="3" data-filter_id="f-3"> <img
+                                                src="img/java.png" width="15px" height="15px"> Java
+                                        </li>
+                                        <li><input type="checkbox" value="4" data-filter_id="f-4"> <img
+                                                src="img/python.png" width="15px" height="15px"> Python
+                                        </li>
+                                        <li><input type="checkbox" value="5" data-filter_id="f-5"> <img
+                                                src="img/database.png" width="15px" height="15px"> Databases
+                                        </li>
+                                        <li><input type="checkbox" value="6" data-filter_id="f-6"> <img
+                                                src="img/html5-fill.png" width="15px" height="15px"> HTML
+                                        </li>
+                                        <li><input type="checkbox" value="7" data-filter_id="f-7"> <img
+                                                src="img/css3-fill.png" width="15px" height="15px"> CSS
+                                        </li>
+                                        <li><input type="checkbox" value="8" data-filter_id="f-8"> <img
+                                                src="img/javascript.png" width="14px" height="14px"> JavaScript
+                                        </li>
+                                        <li><input type="checkbox" value="9" data-filter_id="f-9"> <img
+                                                src="img/reactjs.png" width="18px" height="18px"> React
+                                        </li>
+                                        <li><input type="checkbox" value="asp" data-filter_id="f-10"> <img
+                                                src="img/dot-net.png" width="18px" height="18px"> ASP.NET C#
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div class="projects">
+            <div class="content-item">
+                <p class="chosen-filters"><span id="demo">all-projects</span></p>
+            </div>
+            <div class="results-container">
+                <div id="results-list">
+                    <div class="card 1">
+                        <p><strong class="f-p">project-1</strong> // word-unscrambler</p>
+                        <div class="showcase 1">
+                            <div class="wrapper 1">
+                                <div class="block top-border box1 1" style="background-color:pink">
+                                    <img src="img/wu.png" width="100%" height="100%;">
+                                    <img src="img/c-sharp-2.png" class="icon-img">
+                                </div>
+                                <p style="padding:10px;">Word Unscrambler lets users provide a list of words to be unscrambled.</p>
+                                <a class="view-project" href="https://github.com/starryskyyy/WordUnscrambler" target="_blank">view-project</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card asp 5 6 7 8">
+                        <p><strong class="f-p">project-2</strong>// tech-support-web </p>
+                        <div class="showcase asp 5 6 7 8">
+                            <div class="wrapper asp 5 6 7 8">
+                                <div class="block top-border box1 asp 5 6 7 8" style="background-color:pink" >
+                                    <img src="img/gbc.png" class="main-img" width="100%" height="100%;">
+                                    <img src="img/dot-net2.png" class="icon-img">
+                                    <img src="img/js2.png" class="icon-img-2">
+                                    <img src="img/html2.png" class="icon-img-3">
+                                    <img src="img/css2.png" class="icon-img-4">
+                                    <img src="img/database2.png" class="icon-img-5">
+                                </div>
+                                <p style="padding:10px;">The website consists of web pages for admins and technicians.</p>
+                                <a  class="view-project" href="https://github.com/starryskyyy/GBC-Sporting"  target="_blank">view-project</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card 6 7 8"><p><strong class="f-p">project-2</strong>// ice-cream-shops</p>
+                        <div class="showcase 6 7 8">
+                            <div class="wrapper 6 7 8">
+                                <div class="block top-border box1 6 7 8" style="background-color:pink">
+                                    <img src="img/iceium.png" width="100%" height="100%;">
+                                    <img src="img/js2.png" class="icon-img">
+                                    <img src="img/html2.png" class="icon-img-2">
+                                    <img src="img/css2.png" class="icon-img-3">
+                                </div>
+                                <p style="padding:10px;">The website is designed to find the nearest local ice cream and grocery stores.</p>
+                                <a  class="view-project" href="https://github.com/starryskyyy/WordUnscrambler" target="_blank">view-project</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="row footer">
         <ul class="nav-list-footer">
             <li class="nav-item-f"><a class="disabled-link">find me in:</a></li>
-            <li class="nav-item-f"><a  style="vertical-align:middle" href="#"><img  style="vertical-align:middle" class="center" src="img/in.png"></a></li>
-            <li class="nav-item-f"><a  style="vertical-align:middle" href="#"><img  style="vertical-align:middle" class="center" src="img/inst.png"></a></li>
-            <li class="nav-item-f"><a  style="vertical-align:middle" href="#">@starryskyyy   <img  style="vertical-align:middle" class="center" src="img/git.png"></a></li>
+            <li class="nav-item-f"><a style="vertical-align:middle" href="https://www.linkedin.com/in/elizavetav/"
+                                      target="_blank"><img style="vertical-align:middle" class="center"
+                                                           src="img/in.png"></a></li>
+            <li class="nav-item-f"><a style="vertical-align:middle" href="https://www.instagram.com/vy_elizabeth/"
+                                      target="_blank"><img style="vertical-align:middle" class="center"
+                                                           src="img/inst.png"></a>
+            </li>
+            <li class="nav-item-f"><a style="vertical-align:middle" href="https://github.com/starryskyyy"
+                                      target="_blank">@starryskyyy <img style="vertical-align:middle" class="center"
+                                                                        src="img/git.png"></a></li>
         </ul>
     </div>
 </div>
-<script src="js/snake-game.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
