--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                         <div class="showcase 1">
                             <div class="wrapper 1">
                                 <div class="block top-border box1 1" style="background-color:pink">
-                                    <img src="img/wu.png" width="100%" height="100%;">
+                                    <img src="https://cdn.discordapp.com/attachments/315879205818597377/995464070717263893/wu.png" width="100%" height="100%;">
                                     <img src="img/c-sharp-2.png" class="icon-img">
                                 </div>
                                 <p style="padding:10px;">Word Unscrambler lets users provide a list of words to be unscrambled.</p>
