--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
             </div>
 
         </div>
-        <div class="code-snippet">
+        <div class="code-snippet-contact">
             <div class="content-item">
                 <p class="header-about">code showcase</p>
             </div>
