--- a/projects.html
+++ b/projects.html
@@ -81,12 +81,12 @@
                         <p><strong class="f-p">project-1</strong> // word-unscrambler</p>
                         <div class="showcase 1">
                             <div class="wrapper 1">
-                                <div class="block top-border box1 1" style="background-color:pink">
-                                    <img src="https://cdn.discordapp.com/attachments/315879205818597377/995464070717263893/wu.png" width="100%" height="100%;">
+                                <div class="block top-border box1 1" >
+                                    <img src="img/wu.png" class="main-img" width="100%" height="100%;">
                                     <img src="img/c-sharp-2.png" class="icon-img">
                                 </div>
                                 <p style="padding:10px;">Word Unscrambler lets users provide a list of words to be unscrambled.</p>
-                                <a class="view-project" href="https://github.com/starryskyyy/WordUnscrambler" target="_blank">view-project</a>
+                                <a  class="view-project" href="https://github.com/starryskyyy/WordUnscrambler"  target="_blank">view-project</a>
                             </div>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                         <p><strong class="f-p">project-2</strong>// tech-support-web </p>
                         <div class="showcase asp 5 6 7 8">
                             <div class="wrapper asp 5 6 7 8">
-                                <div class="block top-border box1 asp 5 6 7 8" style="background-color:pink" >
+                                <div class="block top-border box1 asp 5 6 7 8" >
                                     <img src="img/gbc.png" class="main-img" width="100%" height="100%;">
                                     <img src="img/dot-net2.png" class="icon-img">
                                     <img src="img/js2.png" class="icon-img-2">
@@ -107,17 +107,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card 6 7 8"><p><strong class="f-p">project-2</strong>// ice-cream-shops</p>
+                    <div class="card 6 7 8">
+                        <p><strong class="f-p">project-3</strong>// ice-cream-shops </p>
                         <div class="showcase 6 7 8">
                             <div class="wrapper 6 7 8">
-                                <div class="block top-border box1 6 7 8" style="background-color:pink">
-                                    <img src="img/iceium.png" width="100%" height="100%;">
+                                <div class="block top-border box1 6 7 8" >
+                                    <img src="img/iceium.png" class="main-img" width="100%" height="100%;">
                                     <img src="img/js2.png" class="icon-img">
                                     <img src="img/html2.png" class="icon-img-2">
                                     <img src="img/css2.png" class="icon-img-3">
                                 </div>
                                 <p style="padding:10px;">The website is designed to find the nearest local ice cream and grocery stores.</p>
-                                <a  class="view-project" href="https://github.com/starryskyyy/WordUnscrambler" target="_blank">view-project</a>
+                                <a  class="view-project" href="https://starryskyyy.github.io/Iceium---FreyaHacks-hackathon/"  target="_blank">view-project</a>
                             </div>
                         </div>
                     </div>
