--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
             <div class="content-item">
                 <p class="header-about">code showcase</p>
             </div>
-            <div class =" contact" style="height:auto; padding: 50px 30px 0 30px;">
+            <div class =" contact" style="height:auto; padding: 50px 0 0 30px;">
                 <span>1&nbsp;&nbsp;</span><span class="f-pi">const </span><span class="f-p">message</span><span
                     class="f-pi"> = </span><span>{</span>
                 <br>
